# BibMan

./: README.md  att_col.py  feature.md  main.py  onetime_ordering.py  paper_col.py  pyproject.toml  readme.md  requirement.txt  scrollable_list.py  sync_code.sh  talk.txt  test_bib.py  todo.txt  tree_list.py
data/: bib_collection.bib  collection_tree.txt
src/: pyrightconfig.json  run.py
src/bibman/: att_col.py  base.py  bib_collection_default.bib  collection_tree_default.txt  config.py  config.yml  definitions_.py  main.py  onetime_ordering.py  paper_col.py  run_textual_app.py  sync_code.sh  todo.txt  tree_list.py
src/bibman/data/: bib_collection.bib  bib_collection.bib.bk  strang2020linear_note
src/bibman/textual_ui/: attribute_col.py  base_column.py  controllers.py  fancy_listview.py  main.py  my_list_view.py  observer_dp.py  paper_col.py  tag_col.py
src/bibman/textual_ui/css/: bib_man_app.tcss  fancy_listview.tcss
src/bibman/utils/: data_manager.py  get_data_from_zotera.py  others.py
utils/: data_manager.py  get_data_from_zotera.py  network_utils.py  others.py
